--- a/SamsAuctions/Views/Home/Index.cshtml
+++ b/SamsAuctions/Views/Home/Index.cshtml
@@ -5,3 +5,13 @@
 
 <h2>Välkommen till Nackowskis auktioner</h2>
 
+@section Scripts{
+    <script>
+        $(window).on('load', () => {
+            var nav = $("#navHomePage");
+            nav.addClass("active");
+        });
+    </script>
+}
+
+
