--- a/SamsAuctions/Views/Auction/EditAuction.cshtml
+++ b/SamsAuctions/Views/Auction/EditAuction.cshtml
@@ -29,12 +29,12 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="StartDate"></label>
-                        <input asp-for="StartDate"  class="form-control" />
+                        <input id="startDate" asp-for="StartDate"  class="form-control" />
                         <span asp-validation-for="StartDate"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="EndDate"></label>
-                        <input asp-for="EndDate" class="form-control" />
+                        <input id="endDate" asp-for="EndDate" class="form-control" />
                         <span asp-validation-for="EndDate"></span>
                     </div>
                     <div class="form-group">
