--- a/SamsAuctions/Views/Auction/EditAuction.cshtml
+++ b/SamsAuctions/Views/Auction/EditAuction.cshtml
@@ -1,6 +1,5 @@
 ﻿@model AuctionViewModel
 
-
 <!-- Modal -->
 <div id="editAuctionModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
@@ -29,20 +28,21 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="StartDate"></label>
-                        <input id="startDate" asp-for="StartDate"  class="form-control" />
+                        <input id="startDate" asp-for="StartDate" class="form-control" />
                         <span asp-validation-for="StartDate"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="EndDate"></label>
                         <input id="endDate" asp-for="EndDate" class="form-control" />
                         <span asp-validation-for="EndDate"></span>
+                        <div id="customDatesValidation"></div>
                     </div>
                     <div class="form-group">
                         <label asp-for="ReservationPrice"></label>
                         <input asp-for="ReservationPrice" class="form-control" />
                         <span asp-validation-for="ReservationPrice"></span>
                     </div>
-                   
+
                     <button type="submit" class="btn btn-primary">Spara</button>
                     <a href="javascript: closeEditModal();" class="btn btn-secondary">Avbryt</a>
                 </form>
