--- a/SamsAuctions/Views/Shared/_Layout.cshtml
+++ b/SamsAuctions/Views/Shared/_Layout.cshtml
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link href="~/Lib/Bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/Lib/BootstrapThemes/Flatly/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Lib/FontAwesome/css/font-awesome.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
 
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" asp-controller="Home" asp-action="Index">Nackowskis auktioner</a>
