--- a/SamsAuctions/Views/_ViewImports.cshtml
+++ b/SamsAuctions/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SamsAuctions.Models
 @using SamsAuctions.Models.ViewModels
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
