--- a/SamsAuctions/Views/_ViewImports.cshtml
+++ b/SamsAuctions/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SamsAuctions.Models
 @using SamsAuctions.Models.ViewModels
-@using Microsoft.AspNetCore.Identity;
+@using Microsoft.AspNetCore.Identity
+@using System.Globalization
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
